# GravitationSimulation

./: CMakeLists.txt  README.md  main.cpp
Classes/: blackHole.cpp  blackHole.h  camera.cpp  camera.h  grid2D.cpp  grid2D.h  object.cpp  object.h  planet.cpp  planet.h  star.cpp  star.h
src/: glad.c
